feat(): include assets, implement in main page

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -159,7 +159,6 @@
   <div class="content">
     <div class="container">
       <div class="wrap">
-
         <div class="fix-8-12">
           <h1 class="ae-1 smallest margin-bottom-2">One of the tragedies of the design scene is that it always acts too late</h1>
           <p class="ae-2 large margin-bottom-2"><span class="opacity-8">He takes snapshots, makes notes and records impressions on tablecloths or newspapers, on backs of envelopes or matchbooks. Why one thing and not another is part of the mystery, but he is&nbsp;omnivorous.</span></p>
@@ -170,7 +169,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-11.jpg)"></div>
+  <div class="background" style="background-image:url(img-11.jpg)"></div>
 </section>
 <!-- White Slide 2 (#12) -->
 <section class="slide whiteSlide">
@@ -206,7 +205,7 @@
             <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
           </div>
           <div class="videoThumbnail shadow rounded ae-4 fromCenter popupTrigger" data-popup-id="4">
-            <img src="assets/img/video-4.jpg" alt="Video Thumbnail"/>
+            <img src="video-4.jpg" alt="Video Thumbnail"/>
           </div>
         </div>
 
@@ -261,7 +260,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-10.jpg)"></div>
+  <div class="background" style="background-image:url(img-10.jpg)"></div>
 </section>
 <!-- Panel Bottom #01 -->
 <nav class="panel bottom forceMobileView">
