--- a/src/views/main.html
+++ b/src/views/main.html
@@ -46,17 +46,17 @@
 <nav class="panel top">
   <div class="sections desktop">
     <div class="left" style="cursor: pointer;">
-      <a href="#" title="Minimize" onclick="neutron.Minimize()">
+      <a title="Minimize" onclick="neutron.Minimize()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z"/>
         </svg>
       </a>
-      <a href="#" title="Maximize" onclick="neutron.Maximize()" style="margin-left: 14px;">
+      <a title="Maximize" onclick="neutron.Maximize()" style="margin-left: 14px;">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fullscreen" viewBox="0 0 16 16">
           <path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1h-4zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5zM.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5z"/>
         </svg>
       </a>
-      <a href="#" title="Close" onclick="neutron.Close()" style="margin-left: 14px;">
+      <a title="Close" onclick="neutron.Close()" style="margin-left: 14px;">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
           <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
@@ -73,33 +73,6 @@
   </div>
 </nav>
 
-<!-- Sidebar -->
-<nav class="sidebar" data-sidebar-id="1">
-  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
-  <div class="content">
-    <a href="#" class="logo"><svg width="100" height="30"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg></a>
-    <ul class="mainMenu margin-top-3">
-      <li><a href="#">All Goods</a></li>
-      <li><a href="#">UI Kits</a></li>
-      <li><a href="#">Icons</a></li>
-      <li><a href="#">Mockups</a></li>
-      <li><a href="#">Toolkit</a></li>
-    </ul>
-    <ul class="subMenu small opacity-8">
-      <li><a href="#">Submit Product</a></li>
-      <li><a href="#">FAQ</a></li>
-      <li><a href="#">License</a></li>
-      <li><a href="#">Terms & Conditions</a></li>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Contact Us</a></li>
-    </ul>
-    <ul class="social opacity-8">
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-    </ul>
-  </div>
-</nav>
 <!-- Slide 1 (#11) -->
 <section class="slide fade-6 kenBurns">
   <div class="content">
@@ -122,7 +95,6 @@
   <div class="content">
     <div class="container">
       <div class="wrap">
-
         <div class="fix-7-12">
           <h1 class="margin-bottom-2 ae-1">Beyond the Naked Eye</h1>
           <p class="larger light ae-2"><span class="opacity-8">While it was just a TV show, that little speech at the beginning of the original Star Trek show really did do a good job of capturing our feelings about space.</span></p>
@@ -138,23 +110,20 @@
       </div>
     </div>
   </div>
-
 </section>
 <!-- White Slide 3 (#04) -->
 <section class="slide whiteSlide">
   <div class="content">
     <div class="container">
       <div class="wrap">
-
         <div class="fix-5-12">
           <div class="fix-3-12 margin-bottom-5">
-            <svg height="77" class="wide ae-1 fromCenter"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use></svg>
+            Just a video
           </div>
           <div class="videoThumbnail shadow rounded ae-4 fromCenter popupTrigger" data-popup-id="4">
             <img src="video-4.jpg" alt="Video Thumbnail"/>
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -163,7 +132,12 @@
 
 <!-- Popup Video -->
 <div class="popup autoplay" data-popup-id="4">
-  <div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+  <div class="close">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
+      <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
+    </svg>
+  </div>
   <div class="content">
     <div class="container">
       <div class="wrap">
@@ -181,16 +155,13 @@
   <div class="content">
     <div class="container">
       <div class="wrap">
-
         <div class="fix-7-12">
           <h1 class="smaller margin-bottom-2 ae-1">Messes Make Memories</h1>
           <p class="large ae-2"><span class="opacity-8">Some people find it hard to find the right perfume. This may smell good when this is sprayed into the air but this changes when this reacts with the skin.</span></p>
         </div>
-
       </div>
     </div>
   </div>
-
 </section>
 <!-- Slide 5 (#10) -->
 <section class="slide fade-6 kenBurns">
