feat(styling): images, links, also some logic changes for hotkeys

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -79,7 +79,7 @@
     <div class="container">
       <div class="wrap">
         <div class="fix-8-12">
-          <h1 class="ae-1 smallest margin-bottom-2">One of the tragedies of the design scene is that it always acts too late</h1>
+          <h1 class="ae-1 smallest margin-bottom-2">Northgard Advanced Hotkeys</h1>
           <p class="ae-2 large margin-bottom-2"><span class="opacity-8">He takes snapshots, makes notes and records impressions on tablecloths or newspapers, on backs of envelopes or matchbooks. Why one thing and not another is part of the mystery, but he is&nbsp;omnivorous.</span></p>
           <a class="button rounded blue margin-top-1 ae-5 fromCenter">Get Started</a>
           <a class="button rounded white margin-top-1 ae-6 fromCenter">Learn More</a>
@@ -88,7 +88,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(img-11.jpg)"></div>
+  <div class="background" style="background-image:url(home_background.jpg)"></div>
 </section>
 <!-- White Slide 2 (#12) -->
 <section class="slide whiteSlide">
@@ -107,6 +107,20 @@
           </div>
         </div>
 
+      </div>
+    </div>
+  </div>
+</section>
+<!-- White Slide 4 (#10) -->
+<section class="slide whiteSlide">
+  <div class="content">
+    <div class="container">
+      <div class="wrap">
+        <div class="fix-7-12">
+          <h1 class="smaller margin-bottom-2 ae-1">Support the developer</h1>
+          <p class="large ae-2"><span class="opacity-8">Using Northgard Advanced Hotkey regulary? <b>Awesome!</b></br> I have put a lot of hours into the project to provide a completly free and improved gaming experience for everybody. If you decide to give back a little though, you could provide me with some caffeine, so I can add more features and keep fixing bugs in the future.</span></p>
+          <a href="https://www.buymeacoffee.com/codingdurant" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-violet.png" alt="Buy me a coffee" style="height: 60px !important;width: 217px !important;" ></a>
+        </div>
       </div>
     </div>
   </div>
@@ -156,8 +170,9 @@
     <div class="container">
       <div class="wrap">
         <div class="fix-7-12">
-          <h1 class="smaller margin-bottom-2 ae-1">Messes Make Memories</h1>
-          <p class="large ae-2"><span class="opacity-8">Some people find it hard to find the right perfume. This may smell good when this is sprayed into the air but this changes when this reacts with the skin.</span></p>
+          <h1 class="smaller margin-bottom-2 ae-1">Support the developer</h1>
+          <p class="large ae-2"><span class="opacity-8">Using Northgard Advanced Hotkeys regulary? <b>Awesome!</b></br>I have put a lot of hours into the project to provide a completly free and improved gaming experience for everybody. If you decide to give back a little though, you could provide me with some caffeine, so I can add more features and keep fixing bugs in the future.</span></p>
+          <a href="microsoft-edge:https://www.buymeacoffee.com/codingdurant"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-violet.png" alt="Buy me a coffee" style="height: 60px !important;width: 217px !important;" ></a>
         </div>
       </div>
     </div>
@@ -170,14 +185,14 @@
       <div class="wrap">
 
         <div class="fix-7-12">
-          <h1 class="smaller margin-bottom-2 ae-1">Messes Make Memories</h1>
-          <p class="large ae-2"><span class="opacity-8">Some people find it hard to find the right perfume. This may smell good when this is sprayed into the air but this changes when this reacts with the skin.</span></p>
+          <h1 class="smaller margin-bottom-2 ae-1">Open source</h1>
+          <p class="large ae-2"><span class="opacity-8">Northgard Advanced Hotkeys is an Open source project licensed under <b>MIT</b>. Meaning, you can contribute or copy and edit the code in any way you see fit. Don't hesitate to create an issue, if you find a bug or to ask for help. You can click the Github icon in the bottom right to get to the repository page.</span></p>
         </div>
 
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(img-10.jpg)"></div>
+  <div class="background" style="background-image:url(git_background.jpg)"></div>
 </section>
 <!-- Panel Bottom #01 -->
 <nav class="panel bottom forceMobileView">
@@ -190,11 +205,11 @@
       </svg>
       </span>
     </div>
-    <div class="right"><span data-dropdown-id="2" class="button actionButton dropdownTrigger">
+    <div class="right"><a href="microsoft-edge:https://github.com/NicolasDurant/northgard_advanced_hotkeys"><span data-dropdown-id="2" class="button actionButton">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
       </svg>
-    </span></div>
+    </span></a></div>
   </div>
   <div class="sections compact hidden">
     <div class="right">
@@ -202,21 +217,6 @@
     </div>
   </div>
 </nav>
-
-<!-- Share Window -->
-<div class="dropdown share bottom right" data-dropdown-id="2" data-text="Take a look at this" data-url="https://designmodo.com" data-pinterest-image="https://designmodo.com/wp-content/uploads/2015/10/Presentation.jpg">
-  <div class="center padding-2">
-    <div class="title">Share</div>
-    <a href="#">Contact us</a>
-  </div>
-  <ul>
-    <li class="social-facebook"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#fb-like"></use></svg></li>
-    <li class="social-twitter"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></li>
-    <li class="social-pinterest"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterest"></use></svg></li>
-    <li class="social-linkedin"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use></svg></li>
-    <li class="mail" data-subject="Subject" data-body="Body">share by email</li>
-  </ul>
-</div>
 
 <!-- jQuery 3.5.1 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
