--- a/src/views/main.html
+++ b/src/views/main.html
@@ -25,24 +25,22 @@
     <link href="main.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <link href="main.css" rel="stylesheet">
-
     <!-- Fonts and Material Icons -->
     <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Material+Icons&display=swap"/>
     <style>
         .slides { font-family: 'Inter', sans-serif; }
     </style>
-
 </head>
 <body class="slides cards animated noPreload">
-<!-- Navigation -->
+<!-- SIDE NAVIGATION -->
 <nav class="side ">
   <div class="navigation default">
     <ul></ul>
   </div>
 </nav>
-<!-- Draggable Area of Window -->
+<!-- TOP BAR DRAG -->
 <nav class="drag-window-bar" onmousedown="neutron.DragTitleBar()"></nav>
-<!-- Panel Top #01 -->
+<!-- TOP PANEL -->
 <nav class="panel top">
   <div class="sections desktop">
     <div class="left" style="cursor: pointer;">
@@ -72,8 +70,7 @@
     </div>
   </div>
 </nav>
-
-<!-- Slide 1 (#11) -->
+<!-- SLIDE HOME -->
 <section class="slide fade-6 kenBurns">
   <div class="content">
     <div class="container">
@@ -90,7 +87,7 @@
   </div>
   <div class="background" style="background-image:url(home_background.jpg)"></div>
 </section>
-<!-- White Slide 2 (#12) -->
+<!-- SLIDE SETTINGS HOTKEY -->
 <section class="slide whiteSlide">
   <div class="content">
     <div class="container">
@@ -111,7 +108,7 @@
     </div>
   </div>
 </section>
-<!-- White Slide 4 (#10) -->
+<!-- SLIDE SETTINGS LORE -->
 <section class="slide whiteSlide">
   <div class="content">
     <div class="container">
@@ -125,7 +122,7 @@
     </div>
   </div>
 </section>
-<!-- White Slide 3 (#04) -->
+<!-- SLIDE HELP -->
 <section class="slide whiteSlide">
   <div class="content">
     <div class="container">
@@ -141,10 +138,8 @@
       </div>
     </div>
   </div>
-
 </section>
-
-<!-- Popup Video -->
+<!-- SLIDE HELP VIDEO -->
 <div class="popup autoplay" data-popup-id="4">
   <div class="close">
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
@@ -164,7 +159,7 @@
     </div>
   </div>
 </div>
-<!-- White Slide 4 (#10) -->
+<!-- SLIDE SUPPORT -->
 <section class="slide whiteSlide">
   <div class="content">
     <div class="container">
@@ -178,23 +173,21 @@
     </div>
   </div>
 </section>
-<!-- Slide 5 (#10) -->
+<!-- SLIDE OPEN SOURCE -->
 <section class="slide fade-6 kenBurns">
   <div class="content">
     <div class="container">
       <div class="wrap">
-
         <div class="fix-7-12">
           <h1 class="smaller margin-bottom-2 ae-1">Open source</h1>
           <p class="large ae-2"><span class="opacity-8">Northgard Advanced Hotkeys is an Open source project licensed under <b>MIT</b>. Meaning, you can contribute or copy and edit the code in any way you see fit. Don't hesitate to create an issue, if you find a bug or to ask for help. You can click the Github icon in the bottom right to get to the repository page.</span></p>
         </div>
-
       </div>
     </div>
   </div>
   <div class="background" style="background-image:url(git_background.jpg)"></div>
 </section>
-<!-- Panel Bottom #01 -->
+<!-- PANEL BOTTOM -->
 <nav class="panel bottom forceMobileView">
   <div class="sections desktop">
     <div class="left"></div>
@@ -217,12 +210,9 @@
     </div>
   </div>
 </nav>
-
 <!-- jQuery 3.5.1 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
     <!-- Compressed Scripts -->
     <script src="main.min.js"></script>
-
 </body>
 </html>
