--- a/src/views/main.html
+++ b/src/views/main.html
@@ -81,7 +81,6 @@
           <a class="button rounded blue margin-top-1 ae-5 fromCenter">Get Started</a>
           <a class="button rounded white margin-top-1 ae-6 fromCenter">Learn More</a>
         </div>
-
       </div>
     </div>
   </div>
@@ -93,17 +92,16 @@
     <div class="container">
       <div class="wrap">
         <div class="fix-7-12">
-          <h1 class="margin-bottom-2 ae-1">Beyond the Naked Eye</h1>
-          <p class="larger light ae-2"><span class="opacity-8">While it was just a TV show, that little speech at the beginning of the original Star Trek show really did do a good job of capturing our feelings about space.</span></p>
+          <h1 class="margin-bottom-2 ae-1">Hotkeys for Buildings</h1>
+          <p class="larger light ae-2"><span class="opacity-8">Set a custom configuration for your building hotkeys. Allowed values by AutoHotkey can be found in the Documentation.</span></p>
+          <label class="button rounded blue margin-top-1 ae-6 fromCenter" for="submit-hotkey-buildings-form" tabindex="0">Save</label>
+          <a class="button rounded white margin-top-1 ae-6 fromCenter" href="https://www.autohotkey.com/docs/Hotkeys.htm#Symbols" target="_blank">Documentation</a>
           <div class="margin-top-3">
-            <form class="slides-form" action="#" autocomplete="off">
-              <input type="email" class="input-12 rounded ae-5 fromLeft" name="email" placeholder="Email address"/>
-              <button type="submit" class="button blue rounded ae-7 fromCenter" name="button">Get Started</button>
+            <form id="hotkey-buildings-form" class="slides-form" action="#" autocomplete="off" onsubmit="ahk.submit_building_hotkeys(event)">
+              <input id="submit-hotkey-buildings-form" type="submit" hidden></input>
             </form>
-            <p class="large margin-top-3 ae-3"><span class="opacity-8">Start now and get <b>free bonus</b> on account</span></p>
           </div>
         </div>
-
       </div>
     </div>
   </div>
