feat(ui): allow settings and help to jump to slides

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -63,10 +63,11 @@
     </div>
     <div class="right">
       <ul class="menu">
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">Help</a></li>
+        <li><a onclick="ahk.change_slide(event, 2)">Settings</a></li>
+        <li><a onclick="ahk.change_slide(event, 4)">Help</a></li>
       </ul>
-      <a class="button blue rounded small" href="#">Start</a>
+      <!-- <a id="start-button" class="button blue rounded small" onclick="ahk.toggle_suspend(event)">Start</a>
+      <a id="stop-button" class="button blue rounded small" onclick="ahk.toggle_suspend(event)">Stop</a> -->
     </div>
   </div>
 </nav>
