feat(ui): styling for input fields
add house symbol as test

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,3 +4,22 @@
   position: fixed;
   z-index: 20;
 }
+
+#hotkey-buildings-form{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.form-group {
+  position: relative;
+}
+.form-control-label {
+  position: absolute;
+  font-size: 0.5em !important;
+  top: -6px;
+  left: 12px;
+  text-transform: uppercase;
+}
+.form-control-input{
+  max-width: 120px !important;
+}
