--- a/src/views/main.html
+++ b/src/views/main.html
@@ -94,9 +94,9 @@
       <div class="wrap">
         <div class="fix-7-12">
           <h1 class="margin-bottom-2 ae-1">Hotkeys for Buildings</h1>
-          <p class="larger light ae-2"><span class="opacity-8">Set a custom configuration for your building hotkeys. Allowed values by AutoHotkey can be found in the Documentation.</span></p>
-          <label class="button rounded blue margin-top-1 ae-6 fromCenter" for="submit-hotkey-buildings-form" tabindex="0">Save</label>
-          <a class="button rounded white margin-top-1 ae-6 fromCenter" href="https://www.autohotkey.com/docs/Hotkeys.htm#Symbols" target="_blank">Documentation</a>
+          <p class="larger light ae-2"><span class="opacity-8">Set a custom configuration for your building hotkeys. Allowed values by AutoHotkey can be found in the documentation link below.</span></p>
+          <label class="button rounded blue ae-3 fromCenter" for="submit-hotkey-buildings-form" tabindex="0">Save</label>
+          <a class="button rounded white ae-3 fromCenter" href="https://www.autohotkey.com/docs/Hotkeys.htm#Symbols" target="_blank">Documentation</a>
           <div class="margin-top-3">
             <form id="hotkey-buildings-form" class="slides-form" action="#" autocomplete="off" onsubmit="ahk.submit_building_hotkeys(event)">
               <input id="submit-hotkey-buildings-form" type="submit" hidden></input>
