feat(ui): tray icon, export build to dist folder per default, fix layout

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -117,39 +117,39 @@
           <p class="large ae-2"><span class="opacity-8">Just click the image below in the order, in which the script should skill your lore. If you don't want to use this function uncheck the box. Disclaimer: Autoskill doesn't work for Svafnir (snake clan).</span></p>
           <a class="button rounded blue ae-3 fromCenter" href="https://www.autohotkey.com/docs/Hotkeys.htm#Symbols" target="_blank">Save</a>
           <a class="button rounded white ae-3 fromCenter" href="https://www.autohotkey.com/docs/Hotkeys.htm#Symbols" target="_blank">Reset</a>
-          <img class="ae-4 fromBottom" src="common_lore.png" alt="Lore" usemap="#lore" height="482" width="1028">
-          <map name="lore">
-            <!-- COLUMN 1 -->
-            <area onclick="ahk.lore_clicked(event, 'sharp_axes')" shape="rect" coords="34,47,230,94" alt="sharp_axes">
-            <area onclick="ahk.lore_clicked(event, 'weaponsmith')" shape="rect" coords="34,187,230,233" alt="weaponsmith">
-            <area onclick="ahk.lore_clicked(event, 'the_value_of_great_deeds')" shape="rect" coords="34,327,230,372" alt="the_value_of_great_deeds">
-            <!-- COLUMN 2 -->
-            <area onclick="ahk.lore_clicked(event, 'colonization')" shape="rect" coords="291,16,488,62" alt="colonization">
-            <area onclick="ahk.lore_clicked(event, 'eradication')" shape="rect" coords="291,79,488,125" alt="eradication">
-            <area onclick="ahk.lore_clicked(event, 'fur_coats')" shape="rect" coords="291,156,488,202" alt="fur_coats">
-            <area onclick="ahk.lore_clicked(event, 'defensive_strategy')" shape="rect" coords="291,219,488,256" alt="defensive_strategy">
-            <area onclick="ahk.lore_clicked(event, 'ship_building')" shape="rect" coords="291,296,488,341" alt="ship_building">
-            <area onclick="ahk.lore_clicked(event, 'coinage')" shape="rect" coords="291,359,488,404" alt="coinage">
-            <!-- COLUMN 3 -->
-            <area onclick="ahk.lore_clicked(event, 'hero_emblem')" shape="rect" coords="548,16,745,62" alt="hero_emblem">
-            <area onclick="ahk.lore_clicked(event, 'medicine')" shape="rect" coords="548,79,745,125" alt="medicine">
-            <area onclick="ahk.lore_clicked(event, 'young_and_proud')" shape="rect" coords="548,156,745,202" alt="young_and_proud">
-            <area onclick="ahk.lore_clicked(event, 'feeling_safe')" shape="rect" coords="548,219,745,256" alt="feeling_safe">
-            <area onclick="ahk.lore_clicked(event, 'erudition')" shape="rect" coords="548,296,745,341" alt="erudition">
-            <area onclick="ahk.lore_clicked(event, 'carpentry_mastery')" shape="rect" coords="548,359,745,404" alt="carpentry_mastery">
-            <!-- COLUMN 4 -->
-            <area onclick="ahk.lore_clicked(event, 'food_preservation')" shape="rect" coords="805,16,1003,62" alt="food_preservation">
-            <area onclick="ahk.lore_clicked(event, 'shiny_happy_people')" shape="rect" coords="805,79,1003,125" alt="shiny_happy_people">
-            <area onclick="ahk.lore_clicked(event, 'legendary_heroes')" shape="rect" coords="805,156,1003,202" alt="legendary_heroes">
-            <area onclick="ahk.lore_clicked(event, 'monster_slayer')" shape="rect" coords="805,219,1003,256" alt="monster_slayer">
-            <area onclick="ahk.lore_clicked(event, 'negotiation')" shape="rect" coords="805,296,1003,341" alt="negotiation">
-            <area onclick="ahk.lore_clicked(event, 'glory_of_the_clan')" shape="rect" coords="805,359,1003,404" alt="glory_of_the_clan">
-            <!-- BLESSINGS -->
-            <area onclick="ahk.lore_clicked(event, 'freya')" shape="rect" coords="220,434,416,476" alt="freya">
-            <area onclick="ahk.lore_clicked(event, 'baldr')" shape="rect" coords="425,434,621,476" alt="baldr">
-            <area onclick="ahk.lore_clicked(event, 'jord')" shape="rect" coords="631,434,827,476" alt="jord">
-          </map>
         </div>
+        <img class="ae-4 margin-top-2 fromBottom" src="common_lore.png" alt="Lore" usemap="#lore" height="482" width="1028">
+        <map name="lore">
+          <!-- COLUMN 1 -->
+          <area onclick="ahk.lore_clicked(event, 'sharp_axes')" shape="rect" coords="34,47,230,94" alt="sharp_axes">
+          <area onclick="ahk.lore_clicked(event, 'weaponsmith')" shape="rect" coords="34,187,230,233" alt="weaponsmith">
+          <area onclick="ahk.lore_clicked(event, 'the_value_of_great_deeds')" shape="rect" coords="34,327,230,372" alt="the_value_of_great_deeds">
+          <!-- COLUMN 2 -->
+          <area onclick="ahk.lore_clicked(event, 'colonization')" shape="rect" coords="291,16,488,62" alt="colonization">
+          <area onclick="ahk.lore_clicked(event, 'eradication')" shape="rect" coords="291,79,488,125" alt="eradication">
+          <area onclick="ahk.lore_clicked(event, 'fur_coats')" shape="rect" coords="291,156,488,202" alt="fur_coats">
+          <area onclick="ahk.lore_clicked(event, 'defensive_strategy')" shape="rect" coords="291,219,488,256" alt="defensive_strategy">
+          <area onclick="ahk.lore_clicked(event, 'ship_building')" shape="rect" coords="291,296,488,341" alt="ship_building">
+          <area onclick="ahk.lore_clicked(event, 'coinage')" shape="rect" coords="291,359,488,404" alt="coinage">
+          <!-- COLUMN 3 -->
+          <area onclick="ahk.lore_clicked(event, 'hero_emblem')" shape="rect" coords="548,16,745,62" alt="hero_emblem">
+          <area onclick="ahk.lore_clicked(event, 'medicine')" shape="rect" coords="548,79,745,125" alt="medicine">
+          <area onclick="ahk.lore_clicked(event, 'young_and_proud')" shape="rect" coords="548,156,745,202" alt="young_and_proud">
+          <area onclick="ahk.lore_clicked(event, 'feeling_safe')" shape="rect" coords="548,219,745,256" alt="feeling_safe">
+          <area onclick="ahk.lore_clicked(event, 'erudition')" shape="rect" coords="548,296,745,341" alt="erudition">
+          <area onclick="ahk.lore_clicked(event, 'carpentry_mastery')" shape="rect" coords="548,359,745,404" alt="carpentry_mastery">
+          <!-- COLUMN 4 -->
+          <area onclick="ahk.lore_clicked(event, 'food_preservation')" shape="rect" coords="805,16,1003,62" alt="food_preservation">
+          <area onclick="ahk.lore_clicked(event, 'shiny_happy_people')" shape="rect" coords="805,79,1003,125" alt="shiny_happy_people">
+          <area onclick="ahk.lore_clicked(event, 'legendary_heroes')" shape="rect" coords="805,156,1003,202" alt="legendary_heroes">
+          <area onclick="ahk.lore_clicked(event, 'monster_slayer')" shape="rect" coords="805,219,1003,256" alt="monster_slayer">
+          <area onclick="ahk.lore_clicked(event, 'negotiation')" shape="rect" coords="805,296,1003,341" alt="negotiation">
+          <area onclick="ahk.lore_clicked(event, 'glory_of_the_clan')" shape="rect" coords="805,359,1003,404" alt="glory_of_the_clan">
+          <!-- BLESSINGS -->
+          <area onclick="ahk.lore_clicked(event, 'freya')" shape="rect" coords="220,434,416,476" alt="freya">
+          <area onclick="ahk.lore_clicked(event, 'baldr')" shape="rect" coords="425,434,621,476" alt="baldr">
+          <area onclick="ahk.lore_clicked(event, 'jord')" shape="rect" coords="631,434,827,476" alt="jord">
+        </map>
       </div>
     </div>
   </div>
@@ -235,11 +235,6 @@
         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
       </svg>
     </span></a></div>
-  </div>
-  <div class="sections compact hidden">
-    <div class="right">
-      <span data-dropdown-id="2" class="button actionButton dropdownTrigger"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#share"></use></svg></span>
-    </div>
   </div>
 </nav>
 <!-- jQuery 3.5.1 -->
